# praxis

./: .env.example  .gitignore  L.md  README.md  prompt validation.md  pyproject.toml  run.sh
src/praxis/: __init__.py  config.py  main.py
src/praxis/gateway/: __init__.py  core.py  db.py  providers.py  router.py  routes.py  schemas.py
src/praxis/learning/: __init__.py  agents.py  db.py  models.py  routes.py  search.py
src/praxis/web/: __init__.py  routes.py
src/praxis/web/static/: style.css
src/praxis/web/templates/: base.html  day.html  feynman.html  index.html  lab.html  plan.html  roadmap.html  status.html
tests/: test_gateway_telemetry.py  test_learning_modes.py
