[project]
name = "praxis"
version = "0.1.0"
description = "Agentic learning platform — curriculum agent on top of a multi-provider LLM gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pydantic-ai-slim[openai]>=0.0.36",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis"]

[dependency-groups]
dev = []
